# jarray

./: .gitignore  CMakeLists.txt  README.md  jarray.c  jarray.h  jarray_string.c  main.c  make-deb.sh  my_array.c  my_array.h
Examples/: Makefile  jarray_char.c  jarray_double.c  jarray_float.c  jarray_int.c  jarray_points.c  jarray_string.c  quick_start_jarray.c
debian/: changelog  rules
inc/: jarray.h
src/: jarray.c  jarray_char.c  jarray_float.c  jarray_int.c  jarray_string.c  main.c
src/jarray_presets/: jarray_char.c  jarray_double.c  jarray_float.c  jarray_int.c  jarray_long.c  jarray_short.c  jarray_string.c  jarray_uint.c  jarray_ulong.c  jarray_ushort.c
